test_src/compiler_errors/literals/IntTooLargeError4.b
class IntTooLargeError4 {
    void test() {
        println(-2147483649);
    }
}
